fix spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -163,7 +163,7 @@ body {
     justify-content: flex-start;
     align-items: center;
 	padding: 1em 2em;
-	margin-top: 15em;
+	margin-top: 12em;
 	width: 100%;
 	height: 100%;
 }
@@ -193,8 +193,8 @@ body {
 .homepage-description {
 	text-align: center;
 	width: 500px;
-	margin-top: 5em;
-	margin-bottom: 5em;
+	margin-top: 4em;
+	margin-bottom: 6em;
 	padding-left: 2em;
 	padding-right: 2em;
 }
